validaciones para cursos-elearning

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,14 @@ DB_DATABASE=extranet
 DB_USERNAME=root
 DB_PASSWORD=
 
+# CONEXION A INTRANET
+INTRANET_DB_HOST=172.16.0.134
+INTRANET_DB_PORT=3306
+INTRANET_DB_DATABASE=lanumerouno
+INTRANET_DB_USERNAME=developer
+INTRANET_DB_PASSWORD=L4num3r01
+
+
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
