--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
     "private": true,
-    "type": "module",
     "scripts": {
-        "build": "vite build",
-        "dev": "vite",
-        "watch": "vite build --watch"
+        "dev": "npm run watch",
+        "watch": "mix watch",
+        "prod": "mix --production",
+        "development": "npm run dev",
+        "production": "npm run prod",
+        "start": "browser-sync start --server --files 'index.html, css/*.css, js/*.js' --port 8000"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
-        "axios": "^1.7.4",
+        "axios": "^1.7.9",
+        "browser-sync": "^3.0.3",
         "concurrently": "^9.0.1",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.49",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.83.4",
+        "sass-loader": "^12.1.0",
         "tailwindcss": "^3.4.17",
-        "vite": "^6.0"
+        "vite": "^6.0",
+        "vue-loader": "^16.8.3",
+        "webpack": "^5.97.1",
+        "webpack-cli": "^6.0.1"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.7.2"
+        "@fortawesome/fontawesome-free": "^6.7.2",
+        "vue": "^3.5.13",
+        "vue-router": "^4.0.13"
     }
 }
