--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
+        "sweetalert2": "^11.15.10",
         "vue": "^3.5.13",
         "vue-router": "^4.0.13"
     }
