--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
         "production": "npm run prod",
         "start": "browser-sync start --server --files 'index.html, css/*.css, js/*.js' --port 8000",
         "build": "npm run prod"
-
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
@@ -27,12 +26,12 @@
         "webpack": "^5.97.1",
         "webpack-cli": "^6.0.1"
     },
-
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
+        "google-maps": "^4.3.3",
         "sweetalert2": "^11.15.10",
         "vue": "^3.5.13",
-        "vue-router": "^4.0.13"
+        "vue-router": "^4.0.13",
+        "vue3-google-map": "^0.21.1"
     }
 }
-
