--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:j1vQscVFf6AR+iJRIJj6/3Vs/xTLGUZ5w7G2DnVS6MQ=
+APP_KEY=base64:kacX8Wh2HsT6W1UydzBF4uWh5H/a57dNV/BTbV4KPeg=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
+# APP_URL=/var/www/extranetlanumerouno/public
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
