validaciones y se temrina formulario de registro de datos de colaboradores

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=9a1dd6139326727ff07276513e4a935d",
+    "/css/app.css": "/css/app.css?id=1d64e02cfe1618e61e71cdb24680abeb"
 }
