--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
+        "bootstrap": "^5.3.3",
+        "bootstrap-icons": "^1.11.3",
+        "bootstrap-vue": "^2.23.1",
         "google-maps": "^4.3.3",
         "sweetalert2": "^11.15.10",
         "vue": "^3.5.13",
+        "vue-lazyload": "^3.0.0",
         "vue-router": "^4.0.13",
         "vue3-google-map": "^0.21.1"
     }
