--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:kacX8Wh2HsT6W1UydzBF4uWh5H/a57dNV/BTbV4KPeg=
+APP_KEY=base64:9b2knsxktoFDDUvQmq0623+AeGfjD3/TE7seAKoCMWQ=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -22,10 +22,13 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+# DB_CONNECTION=mysql
+# DB_DATABASE=extranet
+DB_CONNECTION=sqlite
+DB_DATABASE=/Users/bryan/Documents/Projects/pc21-laravel10/database/database.sqlite
+
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=extranet
 DB_USERNAME=root
 DB_PASSWORD=
 
