--- a/.env
+++ b/.env
@@ -22,10 +22,14 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# DB_CONNECTION=mysql
-# DB_DATABASE=extranet
+
+# PRODUCCION
 DB_CONNECTION=sqlite
 DB_DATABASE=/app/database/database.sqlite
+
+# LOCAL
+# DB_CONNECTION=sqlite
+# DB_DATABASE=/Users/bryan/Documents/Projects/VICTORPC21/pc21-laravel10/database/database.sqlite
 
 DB_HOST=127.0.0.1
 DB_PORT=3306
