--- a/.env
+++ b/.env
@@ -1,10 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:9b2knsxktoFDDUvQmq0623+AeGfjD3/TE7seAKoCMWQ=
+APP_KEY=base64:j1vQscVFf6AR+iJRIJj6/3Vs/xTLGUZ5w7G2DnVS6MQ=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
-# APP_URL=/var/www/extranetlanumerouno/public
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -22,17 +21,10 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-
-# PRODUCCION
-DB_CONNECTION=sqlite
-DB_DATABASE=/app/database/database.sqlite
-
-# LOCAL
-# DB_CONNECTION=sqlite
-# DB_DATABASE=/Users/bryan/Documents/Projects/VICTORPC21/pc21-laravel10/database/database.sqlite
-
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
+DB_DATABASE=extranet
 DB_USERNAME=root
 DB_PASSWORD=
 
