--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     environment:
       - APP_ENV=production
       - APP_DEBUG=false
-      - APP_KEY=base64:SomeGeneratedAppKeyHere
+      - APP_KEY=base64:ivu7ML5cJ9zNzI2Z3yl9gD7SYtynDHZMFKtNds0/o6k=
     networks:
       - laravel_net
 
