--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   app:
     platform: linux/amd64
     build:
-      context: PC21-LARAVEL10
+      context: ./pc21-laravel10
     image: intranetln1_blade_app
     container_name: intranetln1_blade
     ports:
@@ -14,7 +14,7 @@ services:
     env_file:
       - .env
     volumes:
-      - PC21-LARAVEL10/public:/var/www/public
+      - "./pc21-laravel10/public:/var/www/public"
 
   # NGINX reverso
   nginx:
@@ -25,8 +25,8 @@ services:
     ports:
       - "80:80"
     volumes:
-      - PC21-LARAVEL10/public:/var/www/public:ro
-      - PC21-LARAVEL10/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - "./pc21-laravel10/public:/var/www/public:ro"
+      - "./pc21-laravel10/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro"
     networks:
       - appnet
     restart: always
