--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
 services:
-  # MÓDULO 1: INTRANET
   app:
     platform: linux/amd64
     build:
-      context: ./pc21-laravel10
+      context: .
     image: intranetln1_blade_app
     container_name: intranetln1_blade
     ports:
@@ -14,9 +13,8 @@ services:
     env_file:
       - .env
     volumes:
-      - "./pc21-laravel10/public:/var/www/public"
+      - "./public:/var/www/public"
 
-  # NGINX reverso
   nginx:
     image: nginx:latest
     container_name: nginx-laravel
@@ -25,8 +23,8 @@ services:
     ports:
       - "80:80"
     volumes:
-      - "./pc21-laravel10/public:/var/www/public:ro"
-      - "./pc21-laravel10/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro"
+      - "./public:/var/www/public:ro"
+      - "./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro"
     networks:
       - appnet
     restart: always
