--- a/.env
+++ b/.env
@@ -23,6 +23,9 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
 DB_DATABASE=/var/www/database/database.sqlite
+# DB_CONNECTION=sqlite
+# DB_DATABASE=./database/database.sqlite
+
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USERNAME=root
