--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,11 @@ services:
       - app
     ports:
       - "80:80"
+      - "443:443"   # 🔹 agrega el puerto 443 para HTTPS
     volumes:
       - "./public:/var/www/public:ro"
       - "./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro"
+      - "/etc/letsencrypt/live/pchjtq21.tech:/etc/nginx/ssl:ro"  # 🔹 monta los certificados SSL
     networks:
       - appnet
     restart: always
