--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,21 +1,22 @@
 server {
     listen 80;
-    server_name _;
+    server_name pchjtq21.tech www.pchjtq21.tech;
 
-    error_log /var/log/nginx/error.log debug;
+    # Redirige todo a HTTPS
+    return 301 https://$host$request_uri;
+}
 
-    # -------------------- INTRANET --------------------
+server {
+    listen 443 ssl;
+    server_name pchjtq21.tech www.pchjtq21.tech;
+
+    ssl_certificate     /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
+
     root /var/www/public;
     index index.php index.html;
-
-   # 🔧 Agregado para servir assets de Vite
-    location /build/ {
-        alias /var/www/public/build/;
-        access_log off;
-        expires 1y;
-        add_header Cache-Control public;
-    }
-
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -26,31 +27,9 @@ server {
         fastcgi_pass app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-
-        # ⏱️ Para aumentar el timeout en ftp:
-        fastcgi_read_timeout 300;
-        fastcgi_send_timeout 300;
-        fastcgi_connect_timeout 300;
     }
-
-    # -------------------- FINANZAS --------------------
-    # location /finanzas/ {
-    #     rewrite ^/finanzas(/.*)?$ $1 break;
-    #     proxy_pass http://lanumerouno_finanzas:80;
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    # }
-
 
     location ~ /\.(?!well-known).* {
         deny all;
-    }
-
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|woff|woff2|ttf|svg|eot|otf)$ {
-        access_log off;
-        log_not_found off;
-        expires 30d;
     }
 }
