--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     volumes:
       - "./public:/var/www/public:ro"
       - "./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro"
-      - "/etc/letsencrypt/live/pchjtq21.tech:/etc/nginx/ssl:ro"  # 🔹 monta los certificados SSL
+      - "./nginx/ssl:/etc/nginx/ssl:ro"
     networks:
       - appnet
     restart: always
