--- a/package.json
+++ b/package.json
@@ -32,11 +32,17 @@
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
         "bootstrap-vue": "^2.23.1",
+        "datatables.net": "^2.3.4",
+        "datatables.net-dt": "^2.3.4",
+        "file-saver": "^2.0.5",
         "google-maps": "^4.3.3",
+        "jquery": "^3.7.1",
         "sweetalert2": "^11.15.10",
         "vue": "^3.5.13",
         "vue-lazyload": "^3.0.0",
         "vue-router": "^4.0.13",
-        "vue3-google-map": "^0.21.1"
+        "vue3-easy-data-table": "^1.5.47",
+        "vue3-google-map": "^0.21.1",
+        "xlsx": "^0.18.5"
     }
 }
