--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,13 +7,17 @@ server {
 }
 
 server {
-    listen 443 ssl;
+    listen 443 ssl http2;
     server_name pchjtq21.tech www.pchjtq21.tech;
 
-    ssl_certificate     /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-    ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
+    # Certificados Let's Encrypt (CORRECTO)
+    ssl_certificate     /etc/letsencrypt/live/pchjtq21.tech/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/pchjtq21.tech/privkey.pem;
+
+    # Seguridad SSL
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers off;
 
     root /var/www/public;
     index index.php index.html;
@@ -29,6 +33,7 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
+    # Bloquea archivos ocultos excepto .well-known
     location ~ /\.(?!well-known).* {
         deny all;
     }
