--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,11 +22,14 @@ services:
       - app
     ports:
       - "80:80"
-      - "443:443"   # 🔹 agrega el puerto 443 para HTTPS
+      - "443:443"
     volumes:
       - "./public:/var/www/public:ro"
       - "./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro"
-      - "./nginx/ssl:/etc/nginx/ssl:ro"
+
+      # 🔐 CERTIFICADOS LET'S ENCRYPT (CORRECTO)
+      - "/etc/letsencrypt:/etc/letsencrypt:ro"
+
     networks:
       - appnet
     restart: always
