--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     env_file:
       - .env
     volumes:
-      - "./public:/var/www/public"
+      - ".:/var/www"
 
   nginx:
     image: nginx:latest
@@ -24,12 +24,9 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - "./public:/var/www/public:ro"
+      - ".:/var/www:ro"
       - "./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro"
-
-      # 🔐 CERTIFICADOS LET'S ENCRYPT (CORRECTO)
       - "/etc/letsencrypt:/etc/letsencrypt:ro"
-
     networks:
       - appnet
     restart: always
