--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,9 +24,9 @@ services:
       - "80:80"
       - "443:443"   # 🔹 agrega el puerto 443 para HTTPS
     volumes:
+      - "/etc/letsencrypt:/etc/letsencrypt:ro"
       - "./public:/var/www/public:ro"
       - "./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro"
-      - "./nginx/ssl:/etc/nginx/ssl:ro"
     networks:
       - appnet
     restart: always
